fix hover scale overflow issue

--- a/src/views/weekView/weekView.module.css
+++ b/src/views/weekView/weekView.module.css
@@ -2,7 +2,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding-left: 30px;
 }
 
 .mainContainer {
@@ -13,6 +12,12 @@
 .DateNumberContainer {
     flex: 1;
     position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.DateNumberContainer:first-of-type {
+    padding-left: 30px;
 }
 
 
@@ -26,10 +31,23 @@
     font-weight: bold;
     font-size: 2.5rem;
     position: relative;
+    border-bottom: 4px solid transparent;
 
     @media screen and (max-width:430px) {
         font-size: 1.5rem;
     }
+}
+
+.DateNumber:hover {
+    transform: scale(1.1);
+}
+
+.selectedDate {
+    border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+}
+
+.currentDate {
+    border-bottom: 4px solid rgba(0, 0, 0, 1);
 }
 
 .weekHead {
@@ -48,14 +66,6 @@
     }
 
 }
-
-.DateNumber:hover {}
-
-.selectedDate {}
-
-.currentDate {}
-
-.currentDate:hover {}
 
 .timeBlockContainer {
     height: 100%;
